# rez-next

./: .bincode_tree.txt  .gitignore  .pre-commit-config.yaml  .whoami.txt  AGENTS.md  BENCHMARK_UNIFICATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_BOUNDARY_TESTS.md  CLEANUP_CYCLE_230_SUMMARY.md  CLEANUP_CYCLE_266_REPORT.md  CLEANUP_CYCLE_267_REPORT.md  CLEANUP_CYCLE_268_REPORT.md  CLEANUP_CYCLE_269_REPORT.md  CLEANUP_CYCLE_270_REPORT.md  CLEANUP_CYCLE_271_REPORT.md  CLEANUP_CYCLE_272_REPORT.md  CLEANUP_CYCLE_273_REPORT.md  CLEANUP_CYCLE_274_REPORT.md  CLEANUP_CYCLE_275_REPORT.md  CLEANUP_CYCLE_276_REPORT.md  CLEANUP_CYCLE_277_REPORT.md  CLEANUP_CYCLE_278_REPORT.md  CLEANUP_CYCLE_280_REPORT.md  CLEANUP_CYCLE_281_REPORT.md  CLEANUP_CYCLE_287_REPORT.md  CLEANUP_CYCLE_288_REPORT.md  CLEANUP_CYCLE_297_REPORT.md  CLEANUP_CYCLE_324_REPORT.md  CLEANUP_REPORT.md  CLEANUP_TODO.md  Cargo.toml  GEMINI.md  Makefile  PYO3_REGISTRATION_ISSUE.md  README.md  README_zh.md  SECURITY.md  VERSION_PARSING_FIX.md  audit.toml  (+93 more)
crates/rez-core-build/: Cargo.toml
crates/rez-core-build/src/: artifacts.rs  builder.rs  environment.rs  lib.rs  process.rs  sources.rs  systems.rs
crates/rez-core-cache/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
crates/rez-core-cache/examples/: intelligent_cache_demo.rs  simple_demo.rs
crates/rez-core-cache/src/: adaptive_tuner.rs  benchmarks.rs  cache_config.rs  cache_stats.rs  error.rs  intelligent_manager.rs  lib.rs  performance_monitor.rs  predictive_preheater.rs  tests.rs  unified_cache.rs
crates/rez-core-common/: CHANGELOG.md  Cargo.toml  README.md  README_zh.md
crates/rez-core-common/src/: config.rs  error.rs  lib.rs
crates/rez-core-context/: Cargo.toml
crates/rez-core-context/src/: context.rs  environment.rs  execution.rs  lib.rs  resolved_context.rs  serialization.rs  shell.rs
crates/rez-core-package/: CHANGELOG.md  Cargo.toml  README.md  README_zh.md
crates/rez-core-package/examples/: test_package_management_rust.rs
crates/rez-core-package/src/: lib.rs  management.rs  package.rs  python_ast_parser.rs  requirement.rs  serialization.rs  validation.rs  variant.rs
crates/rez-core-python/: Cargo.toml
crates/rez-core-python/src/: gil_optimization_test.rs  lib.rs
crates/rez-core-repository/: CHANGELOG.md  Cargo.toml  README.md  README_zh.md
crates/rez-core-repository/src/: cache.rs  filesystem.rs  high_performance_scanner.rs  lib.rs  repository.rs  scanner.rs  simple_repository.rs
crates/rez-core-repository/tests/: cache_enhancement_test.rs
crates/rez-core-rex/: Cargo.toml
crates/rez-core-rex/src/: bindings.rs  cache.rs  commands.rs  executor.rs  interpreter.rs  lib.rs  optimized_parser.rs  parser.rs
crates/rez-core-solver/: Cargo.toml  Cargo_standalone.toml  README.md
crates/rez-core-solver/src/: cache.rs  conflict.rs  dependency_resolver.rs  graph.rs  lib.rs  optimized_solver.rs  resolution.rs  solver.rs
crates/rez-core-version/: CHANGELOG.md  Cargo.toml  README.md  README_zh.md
crates/rez-core-version/examples/: parser_performance.rs
crates/rez-core-version/src/: lib.rs  parser.rs  range.rs  version.rs  version_token.rs
crates/rez-next-bind/: Cargo.toml
crates/rez-next-bind/src/: binder.rs  builtin_binders.rs  detect.rs  lib.rs
crates/rez-next-build/: Cargo.toml
crates/rez-next-build/src/: artifacts.rs  builder.rs  environment.rs  lib.rs  process.rs  release.rs  sources.rs  systems.rs  tests.rs  vcs.rs
crates/rez-next-cache/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
crates/rez-next-cache/examples/: intelligent_cache_demo.rs  simple_demo.rs
crates/rez-next-cache/src/: adaptive_tuner.rs  benchmarks.rs  cache_config.rs  cache_stats.rs  error.rs  intelligent_manager.rs  lib.rs  performance_monitor.rs  predictive_preheater.rs  tests.rs  unified_cache.rs
crates/rez-next-common/: CHANGELOG.md  Cargo.toml  README.md  README_zh.md
crates/rez-next-common/src/: config.rs  error.rs  lib.rs  utils.rs
crates/rez-next-config/: Cargo.toml
crates/rez-next-config/src/: lib.rs
crates/rez-next-context/: Cargo.toml
crates/rez-next-context/src/: context.rs  environment.rs  execution.rs  lib.rs  resolved_context.rs  serialization.rs  shell.rs  tests.rs
crates/rez-next-explicit/: Cargo.toml
crates/rez-next-explicit/src/: lib.rs
crates/rez-next-package/: CHANGELOG.md  Cargo.toml  README.md  README_zh.md
crates/rez-next-package-cache/: Cargo.toml
crates/rez-next-package-cache/src/: lib.rs
crates/rez-next-package-filter/: Cargo.toml
crates/rez-next-package-filter/src/: filter.rs  lib.rs  rule.rs
crates/rez-next-package/examples/: test_package_management_rust.rs
crates/rez-next-package/src/: batch.rs  cache.rs  dependency.rs  developer_package.rs  filter.rs  lib.rs  management.rs  package.rs  package_cache.rs  package_copy.rs  package_move.rs  package_order.rs  package_py_utils.rs  package_remove.rs  python_ast_parser.rs  requirement.rs  serialization.rs  validation.rs  variant.rs
crates/rez-next-python/: Cargo.toml  README.md  pyproject.toml
crates/rez-next-python/python/: pyproject.toml
crates/rez-next-python/src/: bind_bindings.rs  bind_bindings_tests.rs  build_bindings.rs  build_bindings_tests.rs  build_functions.rs  build_functions_tests.rs  bundle_functions.rs  bundle_functions_bundle_tests.rs  bundle_functions_list_tests.rs  bundle_functions_tests.rs  bundle_functions_unbundle_tests.rs  cli_functions.rs  command_bindings.rs  completion_bindings.rs  completion_bindings_tests.rs  config_bindings.rs  config_bindings_tests.rs  context_bindings.rs  context_bindings_tests.rs  data_bindings.rs  data_bindings_tests.rs  dependency_conflicts_bindings.rs  depends_bindings.rs  depends_bindings_advanced_tests.rs  depends_bindings_tests.rs  deprecations_bindings.rs  diff_bindings.rs  lib.rs  (+66 more)
crates/rez-next-release-hook/: Cargo.toml
crates/rez-next-repository/: CHANGELOG.md  Cargo.toml  README.md  README_zh.md
crates/rez-next-rex/: Cargo.toml
crates/rez-next-search/: Cargo.toml
crates/rez-next-serialise/: Cargo.toml
standalone_benchmark/: Cargo.toml
standalone_benchmark/benches/: unified_benchmark_suite.rs
(+737 files in other folders)
