[workspace]
members = [
    "crates/rez-next-common",
    "crates/rez-next-version",
    "crates/rez-next-package",
    "crates/rez-next-solver",
    "crates/rez-next-repository",
    "crates/rez-next-context",
    "crates/rez-next-build",
    "crates/rez-next-cache",
    "crates/rez-next-rex",
    "crates/rez-next-suites",
    "crates/rez-next-bind",
    "crates/rez-next-python",
]
exclude = [
    "examples/rez-lsp-integration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LongHao <hal.long@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/loonghao/rez-next"
keywords = ["rez", "package-manager", "dependencies", "version-management"]
categories = ["development-tools"]

[workspace.dependencies]
# External dependencies
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rayon = "1.10"
lru = "0.16"
tokio = { version = "1.45", features = ["full"] }
regex = "1.11"
thiserror = "2.0"
rand = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }

# Dev dependencies
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.7"
rstest = "0.26"
tempfile = "3.20"
assert_matches = "1.5"
pretty_assertions = "1.4"
serial_test = "3.2"

[package]
name = "rez-next"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Next-generation Rez package manager written in Rust"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
# Disable auto-discovery for benchmarks — only explicitly listed [[bench]] entries are compiled.
# This prevents broken bench files in benches/ from causing compilation errors.
autobenches = false

[lib]
name = "rez_core"
crate-type = ["rlib"]

[features]
default = []

[[bin]]
name = "rez-next"
path = "src/bin/rez-next.rs"

[dependencies]
# Workspace crates
rez-next-common = { version = "0.1.0", path = "crates/rez-next-common", default-features = false }
rez-next-version = { version = "0.1.0", path = "crates/rez-next-version", default-features = false }
rez-next-package = { version = "0.1.0", path = "crates/rez-next-package", default-features = false }
rez-next-solver = { version = "0.1.0", path = "crates/rez-next-solver", default-features = false }
rez-next-repository = { version = "0.1.0", path = "crates/rez-next-repository", default-features = false }
rez-next-context = { version = "0.1.0", path = "crates/rez-next-context", default-features = false }
# rez-core-rex = { path = "crates/rez-core-rex" }  # Temporarily disabled due to compilation errors
rez-next-build = { version = "0.1.0", path = "crates/rez-next-build" }
rez-next-cache = { version = "0.1.0", path = "crates/rez-next-cache" }
rez-next-suites = { version = "0.1.0", path = "crates/rez-next-suites" }
rez-next-rex = { version = "0.1.0", path = "crates/rez-next-rex" }
# rez-core-python = { path = "crates/rez-core-python" }  # Temporarily disabled due to DLL issues

# Python bindings - temporarily disabled


# pyo3 = { workspace = true, optional = true }

# CLI dependencies
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
regex.workspace = true
tempfile.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true
assert_matches.workspace = true
pretty_assertions.workspace = true
serial_test.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
rez-next-package = { version = "0.1.0", path = "crates/rez-next-package", default-features = false }
rez-next-rex = { version = "0.1.0", path = "crates/rez-next-rex" }
rez-next-version = { version = "0.1.0", path = "crates/rez-next-version", default-features = false }
rez-next-suites = { version = "0.1.0", path = "crates/rez-next-suites" }
rez-next-common = { version = "0.1.0", path = "crates/rez-next-common", default-features = false }
rez-next-bind = { version = "0.1.0", path = "crates/rez-next-bind" }



[[bench]]
name = "solver_real_repo_bench"
harness = false

[[bench]]
name = "version_benchmark"
harness = false

[[bench]]
name = "package_benchmark"
harness = false

[[bench]]
name = "simple_package_benchmark"
harness = false

[[bench]]
name = "rex_benchmark"
harness = false

[[bench]]
name = "solver_bench_v2"
harness = false

[[bench]]
name = "pip_conversion_benchmark"
harness = false

# Temporarily disabled benchmarks due to API changes
# [[bench]]
# name = "comprehensive_benchmark_suite"
# harness = false

# [[bench]]
# name = "solver_benchmark"
# harness = false

# [[bench]]
# name = "solver_benchmark_main"
# harness = false

# [[bench]]
# name = "context_benchmark"
# harness = false

# [[bench]]
# name = "context_benchmark_main"
# harness = false

# [[bench]]
# name = "simple_context_benchmark"
# harness = false

# [[bench]]
# name = "rex_benchmark_main"
# harness = false

# [[bench]]
# name = "simple_rex_benchmark"
# harness = false

# [[bench]]
# name = "build_cache_benchmark_main"
# harness = false

# [[bench]]
# name = "simple_build_cache_benchmark"
# harness = false

# [[bench]]
# name = "performance_validation_benchmark"
# harness = false

# [[bench]]
# name = "performance_validation_main"
# harness = false

# [build-dependencies]
# pyo3-build-config = "0.25"  # Only needed for Python bindings

# flamegraph = ["pprof"]

# Linting configuration (workspace-level, inherited by all crates)
[workspace.lints.rust]
# Allow unused imports for Python bindings that may not be used in all builds
unused_imports = "allow"
# Allow dead code for experimental features
dead_code = "allow"
# Allow unused variables during development
unused_variables = "allow"
# Allow deprecated items during migration
deprecated = "allow"
# Allow ambiguous glob reexports during development
ambiguous_glob_reexports = "allow"
# Allow irrefutable let patterns
irrefutable_let_patterns = "allow"
# Allow unused mut during development
unused_mut = "allow"
# Allow unexpected cfg checks during development
unexpected_cfgs = "allow"

[workspace.lints.clippy]
# Allow some clippy lints that are too strict for development
too_many_arguments = "allow"
module_inception = "allow"
# Allow common style lints during development
collapsible_else_if = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
manual_map = "allow"
manual_strip = "allow"
manual_ok_err = "allow"
match_result_ok = "allow"
redundant_static_lifetimes = "allow"
write_literal = "allow"
unnecessary_map_or = "allow"
unwrap_or_default = "allow"
len_zero = "allow"
assertions_on_constants = "allow"
if_same_then_else = "allow"
inherent_to_string = "allow"
new_without_default = "allow"
field_reassign_with_default = "allow"
derivable_impls = "allow"
needless_borrow = "allow"
type_complexity = "allow"
identity_op = "allow"
single_char_add_str = "allow"
single_component_path_imports = "allow"
double_ended_iterator_last = "allow"
needless_borrows_for_generic_args = "allow"
ptr_arg = "allow"
format_in_format_args = "allow"
iter_nth_zero = "allow"
redundant_closure = "allow"
useless_conversion = "allow"
useless_format = "allow"
useless_vec = "allow"
# Focus on critical issues only
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }

[lints]
workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
lto = false
