[workspace]
members = [
    "crates/rez-next-common",
    "crates/rez-next-version",
    "crates/rez-next-package",
    "crates/rez-next-solver",
    "crates/rez-next-repository",
    "crates/rez-next-context",
    "crates/rez-next-build",
    "crates/rez-next-cache",
    "crates/rez-next-rex",
    "crates/rez-next-suites",
    "crates/rez-next-bind",
    "crates/rez-next-search",
    "crates/rez-next-package-cache",
    "crates/rez-next-package-filter",
    "crates/rez-next-release-hook",
    "crates/rez-next-serialise",
    "crates/rez-next-explicit",
    "crates/rez-next-python",
    "crates/rez-next-util", "crates/rez-next-config",
]
exclude = [
    "examples/rez-lsp-integration",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
authors = ["LongHao <hal.long@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/loonghao/rez-next"
keywords = ["rez", "package-manager", "dependencies", "version-management"]
categories = ["development-tools"]

[workspace.dependencies]
# External dependencies
# Note: pyo3 version is managed per-crate (see crates/rez-next-python/Cargo.toml)
# pyo3 = { version = "0.25", features = ["extension-module", "abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rayon = "1.10"
lru = "0.18"
tokio = { version = "1.45", features = ["full"] }
regex = "1.11"
thiserror = "2.0"
rand = "0.10"
tracing = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }

# Dev dependencies
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.20"

[package]
name = "rez-next"
version = "0.3.6" # x-release-please-version
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Next-generation Rez package manager written in Rust"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
# Disable benchmark auto-discovery — only explicitly listed [[bench]] entries are compiled.
# This keeps helper or experimental files in `benches/` from being picked up implicitly.

autobenches = false

[lib]
name = "rez_core"
crate-type = ["rlib"]

[features]
default = []
# Optional features used by benchmarks
flamegraph = []
quick-benchmarks = []

[[bin]]
name = "rez-next"
path = "src/bin/rez-next.rs"

[[bin]]
name = "rez"
path = "src/bin/rez.rs"

[dependencies]
# Workspace crates
rez-next-common = { version = "0.3.6", path = "crates/rez-next-common", default-features = false } # x-release-please-version
rez-next-version = { version = "0.3.6", path = "crates/rez-next-version", default-features = false } # x-release-please-version
rez-next-package = { version = "0.3.6", path = "crates/rez-next-package", default-features = false } # x-release-please-version
rez-next-solver = { version = "0.3.6", path = "crates/rez-next-solver", default-features = false } # x-release-please-version
rez-next-repository = { version = "0.3.6", path = "crates/rez-next-repository", default-features = false } # x-release-please-version
rez-next-context = { version = "0.3.6", path = "crates/rez-next-context", default-features = false } # x-release-please-version
rez-next-build = { version = "0.3.6", path = "crates/rez-next-build" } # x-release-please-version
rez-next-cache = { version = "0.3.6", path = "crates/rez-next-cache" } # x-release-please-version
rez-next-suites = { version = "0.3.6", path = "crates/rez-next-suites" } # x-release-please-version
rez-next-rex = { version = "0.3.6", path = "crates/rez-next-rex" } # x-release-please-version



# CLI dependencies
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
regex.workspace = true
tempfile.workspace = true
sha2 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30.0"
crossterm = "0.29.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
rez-next-package = { version = "0.3.6", path = "crates/rez-next-package", default-features = false } # x-release-please-version
rez-next-rex = { version = "0.3.6", path = "crates/rez-next-rex" } # x-release-please-version
rez-next-version = { version = "0.3.6", path = "crates/rez-next-version", default-features = false } # x-release-please-version
rez-next-suites = { version = "0.3.6", path = "crates/rez-next-suites" } # x-release-please-version
rez-next-common = { version = "0.3.6", path = "crates/rez-next-common", default-features = false } # x-release-please-version
rez-next-bind = { version = "0.3.6", path = "crates/rez-next-bind" } # x-release-please-version
rez-next-search = { version = "0.3.6", path = "crates/rez-next-search" } # x-release-please-version



[[bench]]
name = "solver_real_repo_bench"
harness = false

[[bench]]
name = "version_benchmark"
harness = false

[[bench]]
name = "package_benchmark"
harness = false

[[bench]]
name = "simple_package_benchmark"
harness = false

[[bench]]
name = "rex_benchmark"
harness = false

[[bench]]
name = "solver_bench_v2"
harness = false

[[bench]]
name = "pip_conversion_benchmark"
harness = false

[[bench]]
name = "context_operations_benchmark"
harness = false

[[bench]]
name = "depends_benchmark"
harness = false

[[bench]]
name = "cache_operations_benchmark"
harness = false

[[bench]]
name = "rez_vs_reznext_benchmark"
harness = false




# Linting configuration (workspace-level, inherited by all crates)
[workspace.lints.rust]
# Warn on unused imports (tightened from allow — dead file cleanup complete)
unused_imports = "warn"
# Warn on dead code (tightened from allow — cycle 10 cleanup)
dead_code = "warn"
# Warn on unused variables (tightened from allow — cycle 10 cleanup)
unused_variables = "warn"
# Warn on deprecated items (no deprecated attrs in codebase — tightened cycle 12)
deprecated = "warn"
# Warn on ambiguous glob reexports (tightened cycle 12)
ambiguous_glob_reexports = "warn"
# Warn on irrefutable let patterns (tightened cycle 12)
irrefutable_let_patterns = "warn"
# Warn on unused mut bindings (no instances found — tightened from allow)
unused_mut = "warn"
# Warn on unexpected cfg checks (tightened from allow — python-bindings cleanup complete)
unexpected_cfgs = "warn"

[workspace.lints.clippy]
# Critical issue categories
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }

[lints]
workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
lto = false

# [profile.test]
# stack-size is managed per-test via RUST_MIN_STACK=8388608 environment variable
# The "stack-size" key in Cargo.toml is not recognized in this Cargo version
