[package]
name = "rez-core-cache"
version = "0.1.0"
edition = "2021"
authors = ["Long Hao <hal.long@outlook.com>"]
description = "Intelligent caching system for rez-core with multi-level cache and predictive preheating"
license = "Apache-2.0"
repository = "https://github.com/longhao/rez-core"
keywords = ["rez", "cache", "performance", "intelligent", "multi-level"]
categories = ["caching", "development-tools"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# High-performance dependencies
ahash = "0.8"
dashmap = "6.0"
lru = "0.12"

# Async and concurrency
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# System utilities
num_cpus = "1.0"
rand = "0.8"

# Internal dependencies
rez-core-common = { path = "../rez-core-common" }
# Temporarily disabled due to compilation errors in other crates
# rez-core-solver = { path = "../rez-core-solver" }
# rez-core-repository = { path = "../rez-core-repository" }
# rez-core-rex = { path = "../rez-core-rex" }
# rez-core-package = { path = "../rez-core-package" }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tokio-test = "0.4"

[features]
default = ["multi-level", "predictive"]
multi-level = []
predictive = []
monitoring = []
