[package]
name = "rez-core-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Common utilities and types for Rez Core"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Temporarily disabled Python bindings
# python-bindings = ["pyo3"]

[lib]
name = "rez_core_common"
crate-type = ["rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Temporarily disabled Python bindings
# pyo3 = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
