[package]
name = "rez-core-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Context management and environment generation for Rez Core"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rez-core-common = { path = "../rez-core-common" }
rez-core-version = { path = "../rez-core-version" }
rez-core-package = { path = "../rez-core-package" }
# rez-core-repository = { path = "../rez-core-repository" }  # Temporarily disabled
rez-core-solver = { path = "../rez-core-solver" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
pyo3.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
shellexpand = "3.0"
serde_yaml = "0.9"
base64 = "0.21"

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
assert_matches.workspace = true
serial_test.workspace = true
