[package]
name = "rez-core-package"
version = "0.1.0"
edition = "2021"
description = "Package system for Rez Core"
license = "Apache-2.0"

[features]
default = []
python-bindings = ["pyo3"]

[dependencies]
rez-core-common = { path = "../rez-core-common" }
rez-core-version = { path = "../rez-core-version" }
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py38"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.0"
thiserror = "1.0"
tempfile = "3.0"

[lib]
name = "rez_core_package"
crate-type = ["rlib"]
