[package]
name = "rez-core-package"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Advanced package management with complete package.py parsing and 100% Rez compatibility"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/loonghao/rez-core"
documentation = "https://docs.rs/rez-core-package"
readme = "README.md"
keywords = ["package", "rez", "parsing", "management", "python"]
categories = ["development-tools", "parsing", "filesystem"]
exclude = ["tests/fixtures/", "examples/"]

[features]
default = []
# Temporarily disabled Python bindings
# python-bindings = ["pyo3"]

[dependencies]
rez-core-common = { path = "../rez-core-common", default-features = false }
rez-core-version = { path = "../rez-core-version", default-features = false }
# Temporarily disabled Python bindings
# pyo3 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex.workspace = true
thiserror.workspace = true
tempfile.workspace = true
rustpython-parser = "0.3"
rustpython-ast = "0.4"

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
pretty_assertions.workspace = true
assert_matches.workspace = true

[lib]
name = "rez_core_package"
crate-type = ["rlib"]
