[package]
name = "rez-core-repository"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Repository scanning and caching for Rez Core"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rez-core-common = { path = "../rez-core-common" }
rez-core-version = { path = "../rez-core-version" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
lru.workspace = true
thiserror.workspace = true
pyo3.workspace = true

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
assert_matches.workspace = true
serial_test.workspace = true
