[package]
name = "rez-core-repository"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Repository scanning and caching for Rez Core"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rez-core-common = { path = "../rez-core-common" }
rez-core-version = { path = "../rez-core-version" }
rez-core-package = { path = "../rez-core-package" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
lru.workspace = true
thiserror.workspace = true
# Temporarily disabled Python bindings
# pyo3 = { workspace = true, optional = true }
async-trait = "0.1"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Performance optimization dependencies
memmap2 = "0.9"
ahash = "0.8"
smallvec = "1.11"
futures = "0.3"
dashmap = "6.0"
rayon.workspace = true
parking_lot = "0.12"
num_cpus = "1.0"

[features]
default = []
# Temporarily disabled Python bindings
# python-bindings = ["pyo3"]

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
assert_matches.workspace = true
serial_test.workspace = true
