[package]
name = "rez-core-rex"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rex command system for Rez Core"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rez-core-common = { path = "../rez-core-common" }
rez-core-version = { path = "../rez-core-version" }
rez-core-package = { path = "../rez-core-package" }
rez-core-context = { path = "../rez-core-context" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
pyo3.workspace = true
regex = "1.0"
shellexpand = "3.0"
nom = "7.0"
ahash = "0.8"
once_cell = "1.19"
smallvec = "1.11"

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
assert_matches.workspace = true
serial_test.workspace = true
