[package]
name = "rez-core-solver"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Dependency resolution algorithms for Rez Core"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rez-core-common = { path = "../rez-core-common" }
rez-core-version = { path = "../rez-core-version" }
rez-core-package = { path = "../rez-core-package" }
# rez-core-repository = { path = "../rez-core-repository" }  # Temporarily disabled
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
thiserror.workspace = true
pyo3.workspace = true
tokio.workspace = true
regex = "1.0"
dashmap = "6.0"
smallvec = "1.11"
futures = "0.3"

# Temporarily disable bins that depend on astar module
[[bin]]
name = "test_astar"
path = "src/bin/test_astar.rs"
required-features = ["astar"]

[[bin]]
name = "test_heuristics"
path = "src/bin/test_heuristics.rs"
required-features = ["astar"]

[[bin]]
name = "heuristic_demo"
path = "src/bin/heuristic_demo.rs"
required-features = ["astar"]

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
assert_matches.workspace = true
