[package]
name = "rez-core-solver"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Intelligent dependency resolution with A* heuristic algorithms and 3-5x performance improvement"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/loonghao/rez-core"
documentation = "https://docs.rs/rez-core-solver"
readme = "README.md"
keywords = ["solver", "dependency", "resolution", "algorithm", "rez"]
categories = ["development-tools", "algorithms", "data-structures"]
exclude = ["benches/", "examples/"]

[features]
default = []
python-bindings = ["pyo3", "rez-core-common/python-bindings", "rez-core-package/python-bindings", "rez-core-version/python-bindings"]

[dependencies]
rez-core-common = { path = "../rez-core-common" }
rez-core-version = { path = "../rez-core-version" }
rez-core-package = { path = "../rez-core-package" }
rez-core-repository = { path = "../rez-core-repository" }
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
thiserror.workspace = true
pyo3 = { workspace = true, optional = true }
tokio.workspace = true
regex = "1.0"
dashmap = "6.0"
smallvec = "1.11"
futures = "0.3"

# Temporarily disable bins that depend on astar module
[[bin]]
name = "test_astar"
path = "src/bin/test_astar.rs"
required-features = ["astar"]

[[bin]]
name = "test_heuristics"
path = "src/bin/test_heuristics.rs"
required-features = ["astar"]

[[bin]]
name = "heuristic_demo"
path = "src/bin/heuristic_demo.rs"
required-features = ["astar"]

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
assert_matches.workspace = true
